# target_localization

./: README.md
ledge_detector/: CMakeLists.txt  package.xml
ledge_detector/config/: ledge_detect.rviz
ledge_detector/launch/: ledge_detect_with_rviz.launch
ledge_detector/script/: auto_start.sh
ledge_detector/src/: ledge_detector.cpp
target_localization/: CMakeLists.txt  package.xml
target_localization/src/: target_localization.cpp  target_localization_backup.cpp
